# live-scratch

./: .gitignore  .gitmodules  README.md  README_ja.md  package-lock.json  package.json  server.js  setup.js  setup.sh
client/: live-reload.js
default-project/: project.json
docs/: launch-plan.md  win-support-plan.md  win-support-tasks.md
src-tauri/: Cargo.toml  build_error.txt  cleanup-build.js  cleanup-build.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs  workspace.rs
