[package]
name = "live-scratch"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
notify = "7"
notify-debouncer-full = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "6"
log = "0.4"
env_logger = "0.11"
